; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkzynfw.c_write_out_data_align.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkzynfw.c_write_out_data_align.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csum_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @write_out_data_align(i32* %0, i32* %1, i64 %2, i64 %3, %struct.csum_state* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.csum_state*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store %struct.csum_state* %4, %struct.csum_state** %11, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load %struct.csum_state*, %struct.csum_state** %11, align 8
  %18 = call i32 @write_out_data(i32* %14, i32* %15, i64 %16, %struct.csum_state* %17)
  store i32 %18, i32* %13, align 4
  %19 = load i32, i32* %13, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %5
  %22 = load i32, i32* %13, align 4
  store i32 %22, i32* %6, align 4
  br label %34

23:                                               ; preds = %5
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* %10, align 8
  %26 = call i64 @ALIGN(i64 %24, i64 %25)
  %27 = load i64, i64* %9, align 8
  %28 = sub i64 %26, %27
  store i64 %28, i64* %12, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i64, i64* %12, align 8
  %31 = load %struct.csum_state*, %struct.csum_state** %11, align 8
  %32 = call i32 @write_out_padding(i32* %29, i64 %30, i32 255, %struct.csum_state* %31)
  store i32 %32, i32* %13, align 4
  %33 = load i32, i32* %13, align 4
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %23, %21
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @write_out_data(i32*, i32*, i64, %struct.csum_state*) #1

declare dso_local i64 @ALIGN(i64, i64) #1

declare dso_local i32 @write_out_padding(i32*, i64, i32, %struct.csum_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
